--- a/src/styles/Stats.css
+++ b/src/styles/Stats.css
@@ -1,4 +1,5 @@
 #stats {
+  padding: 20px;
   display: block;
   justify-content: center;
   align-items: center;
@@ -7,7 +8,6 @@
 }
 
 #stats-block {
-  height: 33vh;
   width: 100%;
   border-style: solid;
   border-color: #ebe8d4;
@@ -113,6 +113,7 @@ progress::-webkit-progress-value {
 }
 
 .sb-mental-health::-webkit-progress-bar {
+  background-color: blue;
   background-color: #ebe8d4;
   border-color: #4d675c;
 }
